# systemdgenie

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  NEWS  README.md
po/ar/: systemdgenie.po
po/ast/: systemdgenie.po
po/az/: systemdgenie.po
po/bg/: systemdgenie.po
po/bs/: systemdgenie.po
po/ca/: systemdgenie.po
po/ca@valencia/: systemdgenie.po
po/cs/: systemdgenie.po
po/da/: systemdgenie.po
po/de/: systemdgenie.po
po/en_GB/: systemdgenie.po
po/eo/: systemdgenie.po
po/es/: systemdgenie.po
po/et/: systemdgenie.po
po/eu/: systemdgenie.po
po/fi/: systemdgenie.po
po/fr/: systemdgenie.po
po/ga/: systemdgenie.po
po/gl/: systemdgenie.po
po/he/: systemdgenie.po
po/hi/: systemdgenie.po
po/hu/: systemdgenie.po
po/ia/: systemdgenie.po
po/id/: systemdgenie.po
po/it/: systemdgenie.po
po/ja/: systemdgenie.po
po/ka/: systemdgenie.po
po/ko/: systemdgenie.po
po/lt/: systemdgenie.po
po/lv/: systemdgenie.po
po/nl/: systemdgenie.po
po/pl/: systemdgenie.po
po/pt/: systemdgenie.po
po/pt_BR/: systemdgenie.po
po/ro/: systemdgenie.po
po/ru/: systemdgenie.po
po/sa/: systemdgenie.po
po/sk/: systemdgenie.po
po/sl/: systemdgenie.po
po/sv/: systemdgenie.po
po/ta/: systemdgenie.po
po/tr/: systemdgenie.po
po/uk/: systemdgenie.po
po/zh_CN/: systemdgenie.po
po/zh_TW/: systemdgenie.po
src/: CMakeLists.txt  configfilemodel.cpp  configfilemodel.h  controller.cpp  controller.h  editor.cpp  editor.h  loginddbustypes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.kde.systemdgenie.desktop  org.kde.systemdgenie.metainfo.xml  sessionmodel.cpp  sessionmodel.h  sessionsfetchjob.cpp  sessionsfetchjob.h  sortfilterunitmodel.cpp  sortfilterunitmodel.h  systemd_timer_interface.cpp  systemd_timer_interface.h  systemd_unit_interface.cpp  systemd_unit_interface.h  systemdgenieui.rc  systemdunit.cpp  systemdunit.h  timermodel.cpp  timermodel.h  types.cpp  types.h  unitmodel.cpp  unitmodel.h  unitsfetchjob.cpp  unitsfetchjob.h
src/dbus/: org.freedesktop.login1.Manager.xml  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Timer.xml  org.freedesktop.systemd1.Unit.xml
src/helper/: CMakeLists.txt  helper.cpp  helper.h  systemdgenie.actions
src/job/: sessionsfetchjob.cpp  sessionsfetchjob.h  unitsfetchjob.cpp
src/qml/: ConfigFilesPage.qml  Main.qml  SessionsPage.qml  TableDelegate.qml  TablePage.qml  TimersPage.qml  UnitPage.qml  UnitsPage.qml
